--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
 	"dependencies": {
 		"body-parser": "^1.9.2",
 		"express": "^4.10.1",
-		"request": "^2.47.0"
+		"request": "^2.47.0",
+		"ejs": "1.0.0"
 	},
 	"devDependencies": {
 		"mocha": "^2.0.1",
