--- a/app.json
+++ b/app.json
@@ -3,5 +3,15 @@
 	"description": "Small app that will automatically update newly created pull requests in Bitbucket with the branch's Codeship build status.",
 	"repository": "https://github.com/chesleybrown/bitbucket-codeship-status",
 	"logo": "https://raw.githubusercontent.com/chesleybrown/bitbucket-codeship-status/master/media/logo.png",
-	"keywords": ["node", "express", "bitbucket", "codeship"]
+	"keywords": ["node", "express", "bitbucket", "codeship"],
+	"env": {
+		"BITBUCKET_USERNAME": {
+			"description": "Your Bitbucket username or team name.",
+			"value": ""
+		},
+		"BITBUCKET_PASSWORD": {
+			"description": "Your Bitbucket password or API key.",
+			"value": ""
+		}
+	},
 }
