--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"description": "Small app that will automatically update newly created pull requests in Bitbucket with the branch's Codeship build status.",
 	"main": "app.js",
 	"scripts": {
-		"test": "mocha"
+		"test": "mocha",
+		"watch": "mocha -w"
 	},
 	"engines": {
 		"node": "0.10.33"
@@ -25,6 +26,7 @@
 	"homepage": "https://github.com/chesleybrown/bitbucket-codeship-status",
 	"dependencies": {
 		"body-parser": "^1.9.2",
+		"basic-auth-connect": "1.0.0",
 		"express": "^4.10.1",
 		"request": "^2.47.0",
 		"ejs": "1.0.0"
@@ -32,6 +34,7 @@
 	"devDependencies": {
 		"mocha": "^2.0.1",
 		"chai": "^1.9.2",
-		"supertest": "^0.15.0"
+		"supertest": "^0.15.0",
+		"mockery": "^1.4.0"
 	}
 }
